--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,51 +10,53 @@
   <!--
     application.css is where you put your styles
   -->
-  <link rel="stylesheet" href="/stylesheets/application.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+
+  <link rel="stylesheet" href="/stylesheets/application.css">
+
+
   <script src="/javascript/application.js"></script>
 
   <title></title>
 </head>
 
 <body>
-<header id="topbar">
-  <div>
-    <a href="/"></a>
-  </div>
-<% unless current_user.nil? %> 
-    <form autocomplete="off" action="/logout" method="post">
-      <input type="submit" value="logout"/ style="vertical-align:bottom;width:100px;">
-    </form>
-<% else %>
-  <form action="/login" method="post">
-    <div>
-      <div>
-        <input
-        type="text"
-        name="name" 
-        placeholder="name"
-        id="login"
-        tabindex="1"/>
-        <input 
-        type="submit" 
-        style="display:none"/>
-        <button onclick="window.open('/signup','_top');return false; ">Login</button>
-      </div>
-      <div>
-        <input
-        type="password"
-        name="password" 
-        placeholder="*****"
-        tabindex="2"/>
-        <input type="submit" style="display:none"/>
-
-        <button onclick="window.open('/signup/','_top');return false; ">Logout</button>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <%= erb :nav %>
     </div>
-  </form>
-<% end %>
-  <%= yield %>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4 col-xs-12" style="
+    outline: 1px solid red;">
+    <!-- <div class="center-block" style="width:50%;">  -->
+    <img src="http://placehold.it/350x350">
+    <div id="textpad" style="border: 1px solid black; size: 350em 350 em 350em 350em">
+      <h1>Home Page</h1>
+  
+
+<div>
+<a href="/users/new"><button>SignUp</button></a>
+</div>
+
+    </div>
+  </div>
+    <!-- <div class="center-block" style="width:50%;">  -->
+
+      <%= yield %>
+    </div>
+  </div>
+  </div>
+
+
+  <footer id="bottombar">
+  </footer>
+</div>
 </body>
 </html>
