--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -37,27 +37,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4 col-md-offset-4 col-xs-12" style="
-    outline: 1px solid red;">
-    <!-- <div class="center-block" style="width:50%;">  -->
-    <img src="http://placehold.it/350x350">
-    <div id="textpad" style="border: 1px solid black; size: 350em 350 em 350em 350em">
-      <h1>Home Page</h1>
-  
-
-<div>
-<a href="/users/new"><button>SignUp</button></a>
-</div>
-
+ <!--    <div id="textpad" class="col-md-6 col-md-offset-3 col-xs-12" style="outline: 1px solid red;"> -->
+    <div class="center-block" style="width:50%; outline: 1px solid red;"> 
+    <%= yield %>
     </div>
   </div>
-    <!-- <div class="center-block" style="width:50%;">  -->
-
-      <%= yield %>
-    </div>
-  </div>
-  </div>
-
 
   <footer id="bottombar">
   </footer>
