--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -1,18 +1,26 @@
-      <nav class="navbar nav nav-pills" role="navigation">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">Claira</a> 
-          </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login</a>
-                <ul class="dropdown-menu" role="menu">
-                  <li>
-                    <form action="user_session/new" method="post">
-                    <input type="text" name="email" placeholder="email">
-                    <input type="password" name="password" placeholder="******">
-                    </form>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-      </nav>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Claira</a> 
+    </div>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Help</a></li>
+      <li class="dropdown">
+         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login</a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+            <form action="user_session/new" method="post">
+             <input type="text" name="email" placeholder="email">
+            <input type="password" name="password" placeholder="******">
+            </form>
+            </li>
+          </ul>
+        </li>
+       <li><a href="#">Sign Up</a></li>
+      </ul>
+      
+  </div>
+</nav>
