Fixed layout, body padding so nav doesn't overlap

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
+<div class="container-fluid">
+
 <h1>Home Page</h1>
 
 <div id="wysihtml5-toolbar">
@@ -28,4 +30,5 @@ var editor = new wysihtml5.Editor("wysihtml5-textarea", { // id of textarea elem
 });
 </script>
 
+</div>
 
