--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,14 +11,9 @@
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-
   <link rel="stylesheet" href="/stylesheets/application.css">
-
   <script src="/javascript/application.js"></script>
 
   <!-- wysihtml5 parser rules -->
@@ -38,8 +33,10 @@
   </div>
   <div class="row">
  <!--    <div id="textpad" class="col-md-6 col-md-offset-3 col-xs-12" style="outline: 1px solid red;"> -->
+    <div class="col-md-12">
     <div class="center-block" style="width:50%; outline: 1px solid red;"> 
-    <%= yield %>
+      <%= yield %>
+    </div>
     </div>
   </div>
 
