--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -14,17 +14,28 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">About</a></li>
-      <li><a href="#">Help</a></li>
+
+      <form action="/user_session" method="post" class="navbar-form navbar-right" role="login">
+      <div class="form-group">
+      <input type="text" class="form-control input-sm" placeholder="email">
+       <input type="password" class="form-control input-sm" placeholder="password">
+      </div>
+      <button type="submit" class="form-control">Log in</button>
+      </form>
+
       <li class="dropdown">
-         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login</a>
-          <ul class="dropdown-menu" role="menu">
-            <li><form action="user_session/new" method="post">
-              <input type="text" name="email" placeholder="email">
-              <input type="password" name="password" placeholder="******">
-            </form></li>
-          </ul>
-        </li>
-       <li><a href="#">Sign Up</a></li>
+       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create account</a>
+        <ul class="dropdown-menu" role="menu">
+          <li><form action="/user_session/new" method="post">
+          <div class="form-group">
+            <input type="text" name="email" class="form-control" placeholder="email">
+            <input type="password" name="password" class="form-control" placeholder="password">
+            <button type="submit" class="btn btn-default">create</button>
+          </div>
+          </form></li>
+        </ul>
+      </li>
+
     </ul>
     </div>
 
