Moved center-block css to css file, added application.js file, continued work on user paths

--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -17,8 +17,8 @@
 
       <form action="/user_session" method="post" class="navbar-form navbar-right" role="login">
       <div class="form-group">
-      <input type="text" class="form-control input-sm" placeholder="email">
-       <input type="password" class="form-control input-sm" placeholder="password">
+      <input type="text" class="form-control input-sm login_form" placeholder="email">
+       <input type="password" class="form-control input-sm login_form" placeholder="password">
       </div>
       <button type="submit" class="form-control">Log in</button>
       </form>
