--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -7,11 +7,11 @@
     <p><a href="/">update account information</a></p>
   </div>
   <div class="col-md-6">
-    <p>Capsules awaiting launch:</p>
+    <p>Capsules awaiting launch: <div class="pending-capsules">5</div></p>
   </div>
 </div>
 
-<div class="row">
+<div class="row spacer">
   <div class="col-md-4">
   <p> This is where the capsules would go. </p>
  </div>
