--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,34 +1,5 @@
 <div class="container-fluid">
 
-<h1>Home Page</h1>
+<p style="text-align: center">Welcome to Claira. How are you?</p>
 
-<div id="wysihtml5-toolbar">
-  <a data-wysihtml5-command="bold">bold</a>
-  <a data-wysihtml5-command="italic">italic</a>
-  
-  <!-- Some wysihtml5 commands require extra parameters -->
-  <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="red">red</a>
-  <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="green">green</a>
-  <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="blue">blue</a>
-  
-  <!-- Some wysihtml5 commands like 'createLink' require extra paramaters specified by the user (eg. href) -->
-  <a data-wysihtml5-command="createLink">insert link</a>
-  <div data-wysihtml5-dialog="createLink" style="display: none;">
-    <label>
-      Link:
-      <input data-wysihtml5-dialog-field="href" value="http://" class="text">
-    </label>
-    <a data-wysihtml5-dialog-action="save">OK</a> <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-  </div>
-</div>
-
-<form><textarea id="wysihtml5-textarea" placeholder="Enter your text ..." autofocus></textarea></form>
-<script>
-var editor = new wysihtml5.Editor("wysihtml5-textarea", { // id of textarea element
-  toolbar:      "wysihtml5-toolbar", // id of toolbar element
-  parserRules:  wysihtml5ParserRules // defined in parser rules set 
-});
-</script>
-
-</div>
-
+<img src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-belle.jpg" />
