--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row spacer">
  <!--    <div id="textpad" class="col-md-6 col-md-offset-3 col-xs-12" style="outline: 1px solid red;"> -->
     <div class="col-md-12">
       <div class="main-wrapper"> 
