Changed welcome message

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
 
-<p style="text-align: center">Welcome to Claira. How are you?</p>
+<p style="text-align: center">Hello, my name is Claira. How are you?</p>
 
 <img src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-belle.jpg" />
