Text editor added and can save letters into the database

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,13 +13,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/application.css">
   
-  <!-- wysihtml5 parser rules -->
-  <script src="/parser_rules/advanced.js"></script>
   <!-- Library -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script src="/dist/wysihtml5-0.3.0.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/javascript/application.js"></script>
+  <script src="//cdn.ckeditor.com/4.4.5/standard/ckeditor.js"></script>
+  <script src="/javascripts/application.js"></script>
+
 
   <title></title>
 </head>
