--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,15 +10,27 @@
   <!--
     application.css is where you put your styles
   -->
+  <link rel="stylesheet" href="/stylesheets/jquery.fancybox-1.3.4.css">
+
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/application.css">
+
+
   
   <!-- wysihtml5 parser rules -->
   <script src="/parser_rules/advanced.js"></script>
   <!-- Library -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="/dist/wysihtml5-0.3.0.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+
+
+  <script type="text/javascript" src="/javascript/jquery.fancybox-1.3.4.pack.js"></script>
+
   <script src="/javascript/application.js"></script>
 
   <title></title>
@@ -35,8 +47,21 @@
   <div class="row">
  <!--    <div id="textpad" class="col-md-6 col-md-offset-3 col-xs-12" style="outline: 1px solid red;"> -->
     <div class="col-md-12">
+
+    <button style="border-radius: 0%; color: 666;">...</button><%= erb :claira %> 
+
+    <div id="claira_window" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          ...
+        </div>
+      </div>
+    </div>
+
+
     <div class="center-block" style="width:50%; outline: 1px solid red;"> 
       <%= yield %>
+
     </div>
     </div>
   </div>
