--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,4 +2,8 @@
 
 <p style="text-align: center">Hello, my name is Claira. How are you?</p>
 
-<img src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-belle.jpg" />
+<img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-belle.jpg" />
+
+<img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-cinderella.jpg" />
+
+<img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-ariel.jpg" />
