--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Lora', serif;
   background: url('http://i.imgur.com/0iujfE0.jpg') no-repeat right top;
   background-attachment: fixed;
-  background-size: 100%;
+  background-size: 100% 100%;
   background-color: #ECECEC;
 }
 
