--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,7 +8,7 @@
 
 <img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-ariel.jpg" />
 
-@@ index
+<!-- @@ index
 <html>
   <body>
      <h1>Simple Echo & Chat Server</h1>
@@ -42,4 +42,4 @@
       })();
     }
   </script>
-</html>
+</html> -->
