--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -45,19 +45,42 @@
       <div class="main-wrapper"> 
         <%= yield %>
       </div>
-        <button class="claira_button" style="border-radius: 0%; color: 666;">...
+        <button id='super_button' class="claira_button" style="border-radius: 0%; color: 666;">...
         </button>
-        <div id="claira_window" 
+        <script>
+          $(document).ready(function(){
+            $(function() {
+    $('#super_button').each(function() {
+    $(this).attr('target', '_blank')
+}).click(function(e) {
+    top.location = 'http://localhost:3000';
+});
+        // var url = "http://localhost:3000";
+        // $('<iframe />', {
+        //     name: 'frame',
+        //     id:   'claira_iframe',
+        //     src: window.open = url
+        // }).appendTo('body');    
+    // });
+    return false;
+    });
+    
+});
+        </script>
+        
+        <!-- <div id="claira_window" 
           class="modal fade bs-example-modal-lg" 
           tabindex="-1" role="dialog" 
           aria-labelledby="myLargeModalLabel" 
-          aria-hidden="true">
+          aria-hidden="true"> -->
           <iframe 
+          id = "claira_iframe"
           class = "claira"
+          name= "frame"
           top.location.src="http://localhost:3000" 
           frameborder="0">
           </iframe>
-        </div>
+<!--         </div> -->
 
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
