--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Claira</a> 
+      <a class="navbar-brand" href="/"><img class="position-brand" src="http://i.imgur.com/qwggblQ.png" /></a> 
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
