Fixed login button and links

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,11 +2,13 @@
 
 <p style="text-align: center">Hello, my name is Claira. How are you?</p>
 
-<img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-belle.jpg" />
+<form action="/capsules" method="post">
+  <textarea id="editor1" name="editor1" rows="10" cols="10"></textarea>
 
-<img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-cinderella.jpg" />
-
-<img class="img-responsive img-circle" src="http://laughingsquid.com/wp-content/uploads/2013/06/20130612-14221553-ariel.jpg" />
+  <button type="submit" id="editor1" method="post">
+    Send Through Time
+  </button>
+</form>
 
 <!-- @@ index
 <html>
