--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -28,13 +28,21 @@
         </ul>
       </li>
 
+      <% if current_user %>
+      <li><a href="#">Log out</a></li>
+      <% end %>
+
+      <% unless current_user %>
       <form action="/user_session" method="post" class="navbar-form navbar-right" role="login">
       <div class="form-group">
-      <input type="text" class="form-control input-sm login_form transparent-input" placeholder="email">
-       <input type="password" class="form-control input-sm login_form transparent-input" placeholder="password">
+      <input type="text" class="form-control input-sm login_form transparent-input" name="email" placeholder="email">
+       <input type="password" class="form-control input-sm login_form transparent-input" name="password" placeholder="password">
       </div>
       <button type="submit" class="btn btn-default btn-sm">Log in</button>
       </form>
+      <% end %>
+
+
 
     </ul>
     </div>
