--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -15,6 +15,11 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">About</a></li>
 
+      <% if current_user %>
+      <li><a href="#">Profile</a></li>
+      <% end %>
+
+      <% unless current_user %>
       <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create account</a>
         <ul class="dropdown-menu" role="menu">
@@ -28,11 +33,8 @@
         </ul>
       </li>
 
-      <% if current_user %>
       <li><a href="#">Log out</a></li>
-      <% end %>
 
-      <% unless current_user %>
       <form action="/user_session" method="post" class="navbar-form navbar-right" role="login">
       <div class="form-group">
       <input type="text" class="form-control input-sm login_form transparent-input" name="email" placeholder="email">
