--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -13,7 +13,7 @@
 <% @capsules.each do |capsule| %>
   <div class="col-md-4">
     <%= capsule.letter %>
-    <%= capsule.created_on %>
+    <%= capsule.created_at %>
   </div>
 <% end %>
 </div>
