--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -16,7 +16,9 @@
       <li><a href="#">About</a></li>
 
       <% if current_user %>
-      <li><a href="#">Profile</a></li>
+      <li><a href="/users/<%= current_user.id %>">Profile</a></li>
+
+      <li><a href="/user_session/logout">Log out</a></li>
       <% end %>
 
       <% unless current_user %>
@@ -32,8 +34,6 @@
           </form></li>
         </ul>
       </li>
-
-      <li><a href="#">Log out</a></li>
 
       <form action="/user_session" method="post" class="navbar-form navbar-right" role="login">
       <div class="form-group">
