--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -29,7 +29,11 @@
       </li>
 
       <% if current_user %>
-      <li><a href="#">Log out</a></li>
+      <li><a href="/user_session/logout">Log out</a></li>
+      <% end %>
+
+      <% if current_user %>
+      <li><a href="/users/:id">Profile</a></li>
       <% end %>
 
       <% unless current_user %>
