--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -18,7 +18,7 @@
   </div>
 <div class="cols left">
 
-<form action="/users" id="new-event" method="post">
+<form action="/users" method="post">
 
   <div>
     <input 
