--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -25,11 +25,17 @@
       <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create account</a>
         <ul class="dropdown-menu" role="menu">
-          <li><form action="/user_session/new" method="post">
+          <li><form action="/users/new" method="post">
           <div class="form-group">
+
+            <input type="text" name="name" class="form-control" placeholder="name"> 
+
             <input type="text" name="email" class="form-control" placeholder="email">
+
             <input type="password" name="password" class="form-control" placeholder="password">
+
             <button type="submit" class="btn btn-default">create</button>
+            
           </div>
           </form></li>
         </ul>
