--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <p>Hello <%= @user.name %></p>
     <p><%= @user.email %></p>
-    <p><a href="/">update account information</a></p>
+    <p><a href="/users/<%= @user.id %>/edit">update account information</a></p>
   </div>
   <div class="col-md-6">
     <p>Capsules awaiting launch: <%= @capsules.count %></p>
