--- a/app/views/users/update.erb
+++ b/app/views/users/update.erb
@@ -1,41 +1,35 @@
 <h1>Updating Your Profile</h1>
 
-<div class="cols right">
-  <label>Username</label><br>
-  <label>Email</label><br>
-  <label>Password</label><br>
-</div>
-
 <div class="cols left">
 
-<form action="/users" id="new-event" method="post">
+<form action="/users/<%= @user.id %>/edit" method="post">
 
   <div>
+    <label>Name</label>
     <input 
       type="text" 
       name="name" 
-      value="<%= @user && @user.name %>"/>
+      value="<%= @user.name %>"/>
   </div>
 
   <div>
+    <label>Email</label>
     <input 
       type="text" 
       name="email" 
-      value="<%= @user && @user.email %>"/>
+      value="<%= @user.email %>"/>
   </div>
 
   <div>
+    <label>Password</label>
     <input 
       type="password" 
       name="password"
-      placeholder="*******"
-      value="<%= @user && @user.password %>"/>
+      value="<%= @user.password %>"/>
   </div>
 
   <div>
     <input type="submit"/>
   </div>
-
-  <input name="invisble" style="display:none;">
 
 </form>
