--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,12 +11,10 @@
     application.css is where you put your styles
   -->
 
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/stylesheets/application.css">
-
-
+  <link href="/stylesheets/hover.css" rel="stylesheet" media="all">
   
   <!-- Library -->
 
@@ -40,12 +38,12 @@
   <div class="row spacer">
     <div class="col-md-12">
 
-
       <div class="main-wrapper"> 
+      <button id='super_button' class="claira_button btn-lg pulse" style="border-radius: 0%; color: 666;"> <span class="glyphicon glyphicon-record"></span>
+      </button>
         <%= yield %>
       </div>
-        <button id='super_button' class="claira_button" style="border-radius: 0%; color: 666;">...
-        </button>
+
         <script>
           $(document).ready(function(){
             $(function() {
@@ -63,29 +61,15 @@
     // });
     return false;
     });
-    
 });
         </script>
-        
-        <!-- <div id="claira_window" 
-          class="modal fade bs-example-modal-lg" 
-          tabindex="-1" role="dialog" 
-          aria-labelledby="myLargeModalLabel" 
-          aria-hidden="true"> -->
-          <iframe 
+<!--           <iframe 
           id = "claira_iframe"
           class = "claira"
           name= "frame"
           top.location.src="http://localhost:3000" 
           frameborder="0">
-          </iframe>
-<!--         </div> -->
-
-          <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-              ...
-            </div>
-          </div>
+          </iframe> -->
 
       </form>
     </div>
