Fixes to navbar create account link

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,7 +6,7 @@
 <form action="/capsules" method="post">
   <textarea id="editor1" name="editor1" rows="10" cols="10">Today is the tomorrow you worried about yesterday</textarea>
 
-  <button type="submit" id="editor1" method="post">
+  <button type="submit" class="btn-schedule pull-right" id="editor1" method="post">
     Send Through Time
   </button>
 </form>
