--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -56,6 +56,30 @@ body {
   color: rgba(225,225,225,1);
 }
 
+.btn-schedule {
+  color: #fff;
+  background-color: #5bc0de;
+  border-color: #46b8da;
+  display: inline-block;
+  padding: 6px 12px;
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
 /* Navbar styling */
 
 .position-brand {
@@ -74,7 +98,7 @@ body {
 }
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-nav>li>a:hover {
-  color: #CCCC00;
+  color: #75FFD1;
 }
 
 .navbar-default {
