Style updates to everything

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <% if current_user %>
 <div class="container-fluid">
 
-<p style="text-align: center">Hello, my name is Claira. How are you?</p>
+<p class="top-message" style="text-align: center"><%= @message %></p>
 
 <form action="/capsules" method="post">
   <textarea id="editor1" name="editor1" rows="10" cols="10">Today is the tomorrow you worried about yesterday</textarea>
@@ -10,6 +10,11 @@
     Send Through Time
   </button>
 </form>
+
+<% else %>
+<div class="landing-page">
+<p>Today is the tomorrow you worried about yesterday.</p>
+</div>
 <% end %>
 
 <!-- @@ index
