--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/stylesheets/application.css">
   <link href="/stylesheets/hover.css" rel="stylesheet" media="all">
+ <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
   
   <!-- Library -->
 
@@ -39,7 +40,7 @@
     <div class="col-md-12">
 
       <div class="main-wrapper"> 
-      <button id='super_button' class="claira_button btn-lg pulse" style="border-radius: 0%; color: 666;"> <span class="glyphicon glyphicon-record"></span>
+      <button id='super_button' class="claira_button btn-lg pulse" style="border-radius: 0%; color: 666;" data-toggle="tooltip" data-placement="top" title="Speak to me"> <img src="http://i.imgur.com/fuJS9Zv.png" />
       </button>
         <%= yield %>
       </div>
