--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -18,14 +18,20 @@ body {
 .claira_button {
   position: absolute;
   cursor: pointer;
-  top: 35px;
-  margin-left: -85px;
+  top: -29px;
+  margin-left: -53px;
   /*padding: 5px;*/
   text-decoration: none;
   /*border-radius: 50%;*/
   background-color: rgba(225,225,225,0);
   border: transparent;
   }
+
+.top-message {
+  padding-bottom: 10px;
+  padding-top: 10px;
+  color: #75FFD1;
+}
 
 .btn-sm, .btn-group-sm>.btn {
   padding: 4px 10px;
@@ -78,6 +84,19 @@ body {
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+}
+
+.landing-page {
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.landing-page p {
+  font-family: 'La Belle Aurore', cursive;
+  font-weight: 700;
+  font-size: 2em;
 }
 
 /* Navbar styling */
