Styled profile page and added a jquery calender to the index

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,6 +9,7 @@
   <button type="submit" id="editor1" method="post">
     Send Through Time
   </button>
+  <p>Date: <input type="text" id="datepicker"></p>
 </form>
 <% end %>
 
