--- a/app/views/users/update.erb
+++ b/app/views/users/update.erb
@@ -1,4 +1,4 @@
-<h1>Updating Your Profile</h1>
+<h3><p>I Think You're Perfect The Way You Are,<br> But Change Anything You Want</p></h3>
 
 <div class="cols left">
 
