--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -106,8 +106,32 @@ input.transparent-input{
 }
 
 .pending-capsules {
-  width: 20px;
+  width: 10px;
+  height: 10px;
   background-color: rgba(42,42,42,0.5);
   border-radius: 50%;
   border-color: #ccc;
+}
+
+.update:hover {
+  text-shadow: 0px 0 15px #fff;
+}
+.update {
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+#capsule img:hover {
+  -webkit-box-shadow: 0px 0px 15px 15px #fff;
+  box-shadow: 0px 0px 15px 15px #fff;
+  border-radius:50%;
+  opacity: 0.6;
+  -webkit-transform: rotate(720deg);
+  transform: rotate(720deg);
+}
+
+#capsule img {
+  opacity: 1;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
 }
