--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,10 +6,10 @@
 <form action="/capsules" method="post">
   <textarea id="editor1" name="editor1" rows="10" cols="10">Today is the tomorrow you worried about yesterday</textarea>
 
-  <button type="submit" class="btn-schedule pull-right" id="editor1" method="post">
+  <button type="submit" class="btn-schedule pull-right btn-sm" id="editor1" method="post">
     Send Through Time
   </button>
-  <p>Date: <input type="text" id="datepicker"></p>
+  <div class="calendar pull-right"><p>Launch date: <input type="text" id="datepicker" size="9"></p></div>
 </form>
 
 <% else %>
