--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row spacer">
 <% @capsules.each do |capsule| %>
   <div id="capsule" class="col-md-4">
     <a href="/capsules/<%= capsule.id %>" class="grow"><img src="http://3.bp.blogspot.com/_xOG3auSjUPY/TBFaFQXG1gI/AAAAAAAAF-Y/3Fh0fZ97_TU/s320/tardis+icon+4.PNG" class="img-circle"></a>
