--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -67,10 +67,10 @@ body {
   background-color: #5bc0de;
   border-color: #46b8da;
   display: inline-block;
-  padding: 6px 12px;
-  margin-top: 10px;
+  padding: 4px 10px;
+  margin-top: 14px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.42857143;
   text-align: center;
@@ -97,6 +97,13 @@ body {
   font-family: 'La Belle Aurore', cursive;
   font-weight: 700;
   font-size: 2em;
+}
+
+.calendar {
+  padding-top: 10px;
+  margin-top: 5px;
+  margin-right: 8px;
+  font-size: 12px;
 }
 
 /* Navbar styling */
