Small changes to address typos and email template

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
 <p class="top-message" style="text-align: center"><%= @message %></p>
 
 <form action="/capsules" method="post">
-  <textarea id="editor1" name="editor1" rows="10" cols="10">Today is the tomorrow you worried about yesterday</textarea>
+  <textarea id="editor1" name="editor1" rows="10" cols="10">Today is the tomorrow you worried about yesterday.</textarea>
 
   <button type="submit" class="btn-schedule pull-right btn-sm" id="editor1" method="post">
     Send Through Time
